MDEV-22943: Assertion 'marked_for_read()' failed in Field_varstring::val_str on CHECKSUM TABLE

use_all_stored_columns() cleared read_set bits for all generated
columns, including persistent generated columns.

This caused stored generated columns to be accessed without being
marked for read, leading to a marked_for_read() assertion during
CHECKSUM TABLE EXTENDED.

Only exclude non-stored virtual generated columns from read_set.